Resolves: tdf#155750 allow private:factory urls in floating frames

they create a new document so there isn't an associated location
which would trigger the prompt to allow it so just allow factory
urls

Change-Id: I7b693bcfe5ac04aaed06905637ab3c1eba43c51f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153330
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>